Fix: CheckBackSoon component overflowing.

--- a/src/styles/check-back-soon.module.scss
+++ b/src/styles/check-back-soon.module.scss
@@ -1,10 +1,12 @@
 @use "@styles/_theme.module.scss" as Theme;
 .svg{
-  position: relative
+  position: absolute;
 }
-.dog {
-  position:absolute;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  width: fit-content;
+  position: relative;
 }
-//.container {
-//
-//}
